--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,12 +5,15 @@
   </div>
 
   <div class="box">
-    <% for (let i=0; i<newListItems.length; i++) { %>
-      <div class="item">
-        <input type="checkbox">
-        <p><%=  newListItems[i]  %></p>
-      </div>
-      <% } %>
+
+<%newListItems.forEach(function(item){%>
+  <form action="/delete" method="post">
+  <div class="item">
+    <input onchange="this.form.submit()" name="checkbox" type="checkbox" value="<%=item._id %>">
+    <p><%=  item.name %></p>
+  </div>
+  </form>
+<%})%>
 
       <form class="item" action="/" method="post">
         <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
